Update course materials
Update TDC course materials

--- a/teaching/tdc.html
+++ b/teaching/tdc.html
@@ -23,6 +23,14 @@ title: Tin đại cương
 	<ul style="list-style-type:none"> 
 		<li> <a href="/download/TDC_chap_0.pdf">0. Giới thiệu</a>
 		<li> <a href="/download/TDC_chap_1.pdf">1. Máy tính và xử lý thông tin</a>
+		<li> <a href="/download/TDC_chap_2.pdf">2. Thuật toán và các khái niệm C++</a>
+		<li> <a href="/download/TDC_chap_3.pdf">3. Hàm</a>
+	</ul>
+	
+	<li> Bài thực hành
+	<ul style="list-style-type:none"> 
+		<li> <a href="/download/TH-TDC/TH 1.pdf">0. Làm quen với C++</a>
+		<li> <a href="/download/TH-TDC/TH 2.pdf">1. Các khái niệm cơ bản</a>
 	</ul>
 </ul>
 </font>
