--- a/teaching/tdc.html
+++ b/teaching/tdc.html
@@ -29,8 +29,9 @@ title: Tin đại cương
 	
 	<li> Bài thực hành
 	<ul style="list-style-type:none"> 
-		<li> <a href="/download/TH-TDC/TH 1.pdf">0. Làm quen với C++</a>
-		<li> <a href="/download/TH-TDC/TH 2.pdf">1. Các khái niệm cơ bản</a>
+		<li> <a href="/download/TH-TDC/TH 1.pdf">1. Làm quen với C++</a>
+		<li> <a href="/download/TH-TDC/TH 2.pdf">2. Các khái niệm cơ bản</a>
+		<li> <a href="/download/TH-TDC/TH 3.pdf">3. Hàm</a>
 	</ul>
 </ul>
 </font>
