--- a/teaching/tdc.html
+++ b/teaching/tdc.html
@@ -25,6 +25,12 @@ title: Tin đại cương
 		<li> <a href="/download/TDC_chap_1.pdf">1. Máy tính và xử lý thông tin</a>
 		<li> <a href="/download/TDC_chap_2.pdf">2. Thuật toán và các khái niệm C++</a>
 		<li> <a href="/download/TDC_chap_3.pdf">3. Hàm</a>
+		<li> <a href="/download/TDC_chap_4.pdf">4. Nhập xuất</a>
+		<li> <a href="/download/TDC_chap_5.pdf">5. Các câu lệnh lựa chọn</a>
+		<li> <a href="/download/TDC_chap_6.pdf">6. Các câu lệnh lặp</a>
+		<li> <a href="/download/TDC_chap_7.pdf">7. Xâu ký tự</a>
+		<li> <a href="/download/TDC_chap_8.pdf">8. Mảng</a>
+		<li> <a href="/download/TDC_chap_9.pdf">9. Vector và cấu trúc</a>
 	</ul>
 	
 	<li> Bài thực hành
@@ -32,6 +38,7 @@ title: Tin đại cương
 		<li> <a href="/download/TH-TDC/TH 1.pdf">1. Làm quen với C++</a>
 		<li> <a href="/download/TH-TDC/TH 2.pdf">2. Các khái niệm cơ bản</a>
 		<li> <a href="/download/TH-TDC/TH 3.pdf">3. Hàm</a>
+		<li> <a href="/download/TH-TDC/TH 3.pdf">4. Nhập xuất</a>
 	</ul>
 </ul>
 </font>
