update TH TDC 567

--- a/teaching/tdc.html
+++ b/teaching/tdc.html
@@ -39,6 +39,9 @@ title: Tin đại cương
 		<li> <a href="/download/TH-TDC/TH 2.pdf">2. Các khái niệm cơ bản</a>
 		<li> <a href="/download/TH-TDC/TH 3.pdf">3. Hàm</a>
 		<li> <a href="/download/TH-TDC/TH 4.pdf">4. Nhập xuất</a>
+		<li> <a href="/download/TH-TDC/TH 5.pdf">5. Các câu lệnh lựa chọn</a>
+		<li> <a href="/download/TH-TDC/TH 6.pdf">6. Các câu lệnh lặp</a>
+		<li> <a href="/download/TH-TDC/TH 7.pdf">7. Xâu ký tự</a>
 	</ul>
 </ul>
 </font>
