--- a/teaching/tdc.html
+++ b/teaching/tdc.html
@@ -42,6 +42,7 @@ title: Tin đại cương
 		<li> <a href="/download/TH-TDC/TH 5.pdf">5. Các câu lệnh lựa chọn</a>
 		<li> <a href="/download/TH-TDC/TH 6.pdf">6. Các câu lệnh lặp</a>
 		<li> <a href="/download/TH-TDC/TH 7.pdf">7. Xâu ký tự</a>
+		<li> <a href="/download/TH-TDC/TH 8.pdf">8. Mảng</a>
 	</ul>
 </ul>
 </font>
