--- a/teaching/tdc.html
+++ b/teaching/tdc.html
@@ -43,6 +43,7 @@ title: Tin đại cương
 		<li> <a href="/download/TH-TDC/TH 6.pdf">6. Các câu lệnh lặp</a>
 		<li> <a href="/download/TH-TDC/TH 7.pdf">7. Xâu ký tự</a>
 		<li> <a href="/download/TH-TDC/TH 8.pdf">8. Mảng</a>
+		<li> <a href="/download/TH-TDC/TH 9.pdf">9. Vector và cấu trúc</a>
 	</ul>
 </ul>
 </font>
