Update grade for mid exam of N02

--- a/teaching/tdc.html
+++ b/teaching/tdc.html
@@ -18,7 +18,10 @@ title: Tin đại cương
 	<p> - Điểm quá trình 40% </br>
 		- Thi cuối kỳ 60%
 	</p>
-	
+	<li> Điểm bài thi giữa kỳ
+	<ul>
+		<li> <a href="/download/N02 QT - Raw.pdf">Lớp N02</a>
+	</ul>
 	<li> Bài giảng
 	<ul style="list-style-type:none"> 
 		<li> <a href="/download/TDC_chap_0.pdf">0. Giới thiệu</a>
