update score for TDC course

--- a/teaching/tdc.html
+++ b/teaching/tdc.html
@@ -18,9 +18,10 @@ title: Tin đại cương
 	<p> - Điểm quá trình 40% </br>
 		- Thi cuối kỳ 60%
 	</p>
-	<li> Điểm bài thi giữa kỳ
+	<li> Điểm quá trình
 	<ul>
-		<li> <a href="/download/N02 QT - Raw.pdf">Lớp N02</a>
+		<li> <a href="/download/N02 QT.pdf">Lớp N02</a>
+		<li> <a href="/download/N04 QT.pdf">Lớp N04</a>
 	</ul>
 	<li> Bài giảng
 	<ul style="list-style-type:none"> 
