Update Chap 3+4 ToC course

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -26,7 +26,8 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Slide/Chap 0.pdf">0. Giới thiệu</a>
 		<li> <a href="/download/LTTT/Slide/Chap 1.pdf">1. Kiến thức cơ sở</a>
 		<li> <a href="/download/LTTT/Slide/Chap 2.pdf">2. Ôtômat hữu hạn</a>
-		<!--<li> <a href="/download/TDC_chap_3.pdf">3. Ôtômat hữu hạn không đơn định</a>-->
+		<li> <a href="/download/LTTT/Slide/Chap 3.pdf">3. Ôtômat hữu hạn không đơn định</a>
+		<li> <a href="/download/LTTT/Slide/Chap 4.pdf">4. Biểu thức chính quy</a>
 	</ul>
 	<!--
 	<li> Bài thực hành
