--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -29,10 +29,11 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Slide/Chap 3.pdf">3. Ôtômat hữu hạn không đơn định</a>
 		<li> <a href="/download/LTTT/Slide/Chap 4.pdf">4. Biểu thức chính quy</a>
 	</ul>
-	<!--
+	
 	<li> Bài thực hành
 	<ul style="list-style-type:none"> 
-		<li> <a href="/download/TH-TDC/TH 1.pdf">1. Làm quen với C++</a>
+		<li> <a href="/download/LTTT/Practice/TH 1.pdf">1. Bài thực hành số 1</a>
+		<!--
 		<li> <a href="/download/TH-TDC/TH 2.pdf">2. Các khái niệm cơ bản</a>
 		<li> <a href="/download/TH-TDC/TH 3.pdf">3. Hàm</a>
 		<li> <a href="/download/TH-TDC/TH 4.pdf">4. Nhập xuất</a>
@@ -41,7 +42,8 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/TH-TDC/TH 7.pdf">7. Xâu ký tự</a>
 		<li> <a href="/download/TH-TDC/TH 8.pdf">8. Mảng</a>
 		<li> <a href="/download/TH-TDC/TH 9.pdf">9. Vector và cấu trúc</a>
+		-->
 	</ul>
-	-->
+	
 </ul>
 </font>
