--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -28,6 +28,7 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Slide/Chap 2.pdf">2. Ôtômat hữu hạn</a>
 		<li> <a href="/download/LTTT/Slide/Chap 3.pdf">3. Ôtômat hữu hạn không đơn định</a>
 		<li> <a href="/download/LTTT/Slide/Chap 4.pdf">4. Biểu thức chính quy</a>
+		<li> <a href="/download/LTTT/Slide/Chap 5.pdf">5. Ngôn ngữ không chính quy</a>
 	</ul>
 	
 	<li> Bài thực hành
