update chap 6 ToC

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -29,6 +29,7 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Slide/Chap 3.pdf">3. Ôtômat hữu hạn không đơn định</a>
 		<li> <a href="/download/LTTT/Slide/Chap 4.pdf">4. Biểu thức chính quy</a>
 		<li> <a href="/download/LTTT/Slide/Chap 5.pdf">5. Ngôn ngữ không chính quy</a>
+		<li> <a href="/download/LTTT/Slide/Chap 6.pdf">6. Văn phạm phi ngữ cảnh</a>
 	</ul>
 	
 	<li> Bài thực hành
