update practice 2 ToC course

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -36,16 +36,7 @@ mô hình tính toán trên máy tính </br>
 	<li> Bài thực hành
 	<ul style="list-style-type:none"> 
 		<li> <a href="/download/LTTT/Practice/TH 1.pdf">1. Bài thực hành số 1</a>
-		<!--
-		<li> <a href="/download/TH-TDC/TH 2.pdf">2. Các khái niệm cơ bản</a>
-		<li> <a href="/download/TH-TDC/TH 3.pdf">3. Hàm</a>
-		<li> <a href="/download/TH-TDC/TH 4.pdf">4. Nhập xuất</a>
-		<li> <a href="/download/TH-TDC/TH 5.pdf">5. Các câu lệnh lựa chọn</a>
-		<li> <a href="/download/TH-TDC/TH 6.pdf">6. Các câu lệnh lặp</a>
-		<li> <a href="/download/TH-TDC/TH 7.pdf">7. Xâu ký tự</a>
-		<li> <a href="/download/TH-TDC/TH 8.pdf">8. Mảng</a>
-		<li> <a href="/download/TH-TDC/TH 9.pdf">9. Vector và cấu trúc</a>
-		-->
+		<li> <a href="/download/LTTT/Practice/TH 2.pdf">2. Bài thực hành số 2</a>
 	</ul>
 	
 </ul>
