--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -32,6 +32,7 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Slide/Chap 6.pdf">6. Văn phạm phi ngữ cảnh</a>
 		<li> <a href="/download/LTTT/Slide/Chap 7.pdf">7. Ôtômat đẩy xuống</a>
 		<li> <a href="/download/LTTT/Slide/Chap 8.pdf">8. Máy Turing</a>
+		<li> <a href="/download/LTTT/Slide/Chap 9.pdf">9. Các biến thể của máy Turing</a>
 	</ul>
 	
 	<li> Bài thực hành
