update practice 3 ToC course

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -39,6 +39,7 @@ mô hình tính toán trên máy tính </br>
 	<ul style="list-style-type:none"> 
 		<li> <a href="/download/LTTT/Practice/TH 1.pdf">1. Bài thực hành số 1</a>
 		<li> <a href="/download/LTTT/Practice/TH 2.pdf">2. Bài thực hành số 2</a>
+		<li> <a href="/download/LTTT/Practice/TH 3.pdf">3. Bài thực hành số 3</a>
 	</ul>
 	
 </ul>
