Update chap 10 ToC

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -33,6 +33,7 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Slide/Chap 7.pdf">7. Ôtômat đẩy xuống</a>
 		<li> <a href="/download/LTTT/Slide/Chap 8.pdf">8. Máy Turing</a>
 		<li> <a href="/download/LTTT/Slide/Chap 9.pdf">9. Các biến thể của máy Turing</a>
+		<li> <a href="/download/LTTT/Slide/Chap 10.pdf">10. Định nghĩa giải thuật</a>
 	</ul>
 	
 	<li> Bài thực hành
