--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -34,6 +34,7 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Slide/Chap 8.pdf">8. Máy Turing</a>
 		<li> <a href="/download/LTTT/Slide/Chap 9.pdf">9. Các biến thể của máy Turing</a>
 		<li> <a href="/download/LTTT/Slide/Chap 10.pdf">10. Định nghĩa giải thuật</a>
+		<li> <a href="/download/LTTT/Slide/Chap 11.pdf">11. Các ngôn ngữ quyết định được</a>
 	</ul>
 	
 	<li> Bài thực hành
