Update chap 12,13 ToC

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -35,6 +35,8 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Slide/Chap 9.pdf">9. Các biến thể của máy Turing</a>
 		<li> <a href="/download/LTTT/Slide/Chap 10.pdf">10. Định nghĩa giải thuật</a>
 		<li> <a href="/download/LTTT/Slide/Chap 11.pdf">11. Các ngôn ngữ quyết định được</a>
+		<li> <a href="/download/LTTT/Slide/Chap 12.pdf">12. Ôn tập</a>
+		<li> <a href="/download/LTTT/Slide/Chap 13.pdf">13. Bài toán dừng</a>
 	</ul>
 	
 	<li> Bài thực hành
