update practice 5 ToC

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -45,6 +45,7 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Practice/TH 2.pdf">2. Bài thực hành số 2</a>
 		<li> <a href="/download/LTTT/Practice/TH 3.pdf">3. Bài thực hành số 3</a>
 		<li> <a href="/download/LTTT/Practice/TH 4.pdf">4. Bài thực hành số 4</a>
+		<li> <a href="/download/LTTT/Practice/TH 5.pdf">5. Bài thực hành số 5</a>
 	</ul>
 	
 </ul>
