update chap 14 ToC

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -37,6 +37,7 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Slide/Chap 11.pdf">11. Các ngôn ngữ quyết định được</a>
 		<li> <a href="/download/LTTT/Slide/Chap 12.pdf">12. Ôn tập</a>
 		<li> <a href="/download/LTTT/Slide/Chap 13.pdf">13. Bài toán dừng</a>
+		<li> <a href="/download/LTTT/Slide/Chap 14.pdf">14. Quy dẫn</a>
 	</ul>
 	
 	<li> Bài thực hành
