update midterm result

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -20,7 +20,13 @@ mô hình tính toán trên máy tính </br>
 	<p> - Điểm quá trình 40% </br>
 		- Thi cuối kỳ 60%
 	</p>
-
+	
+	<li> Điểm thi giữa ky K56
+	<ul style="list-style-type:none"> 
+		<li> <a href="/download/LTTT/Midterm/Midterm_K56_1.pdf">Nhóm 1</a>
+		<li> <a href="/download/LTTT/Midterm/Midterm_K56_2.pdf">Nhóm 2</a>
+	</ul>
+	
 	<li> Bài giảng
 	<ul style="list-style-type:none"> 
 		<li> <a href="/download/LTTT/Slide/Chap 0.pdf">0. Giới thiệu</a>
