Update BTL HKSS

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -21,14 +21,9 @@ mô hình tính toán trên máy tính </br>
 		- Thi cuối kỳ 60%
 	</p>
 	
-	<li> Điểm thi giữa kỳ K56
-	<p> Trả lời cho việc một số bạn hỏi sao em làm được mà điểm lại thấp: </br>
-		- Các em làm chưa đúng và một số bạn thì chép bài của nhau --> sai giống nhau.
-		- Đây là điểm cuối cùng không còn thay đổi gì nữa. 
-	</p>
+	<li> BTL lớp học kỳ song song 2017-2018
 	<ul style="list-style-type:none"> 
-		<li> <a href="/download/LTTT/Midterm/Midterm_K56_1.pdf">Nhóm 1</a>
-		<li> <a href="/download/LTTT/Midterm/Midterm_K56_2.pdf">Nhóm 2</a>
+		<li> <a href="/download/LTTT/Practice/BTL.pdf">Đề tài BTL</a>
 	</ul>
 	
 	<li> Bài giảng
