update grade of SS2 16-17

--- a/teaching/lttt.html
+++ b/teaching/lttt.html
@@ -26,6 +26,11 @@ mô hình tính toán trên máy tính </br>
 		<li> <a href="/download/LTTT/Practice/BTL.pdf">Đề tài BTL</a>
 	</ul>
 	
+	<li> Điểm quá trình lớp học kỳ song song 2017-2018
+	<ul style="list-style-type:none"> 
+		<li> <a href="/download/LTTT/Midterm/LTTT_HKSS_2016_2017.pdf">Điểm quá trình</a>
+	</ul>
+	
 	<li> Bài giảng
 	<ul style="list-style-type:none"> 
 		<li> <a href="/download/LTTT/Slide/Chap 0.pdf">0. Giới thiệu</a>
